<resources>
    <string name="app_name">RickAndMortyViki</string>
    <string name="characterStatus">Status:</string>
    <string name="characterSpecies">Species:</string>
    <string name="characterGender">Gender:</string>
    <string name="episodeAirDate">Air_date:</string>
    <string name="Episode">Episode:</string>
    <string name="locationType">Type:</string>
    <string name="locationDimension">Dimension:</string>
    <string name="list_of_episodes">List of Episodes</string>
    <string name="characterOrigin">Origin:</string>
    <string name="characterLocation">Location :</string>
    <string name="location_list_of_characters">List of Residents</string>
    <string name="list_of_characters">List of Characters</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="some_characters">Some characters</string>
    <string name="character_name">Character Name</string>
    <string name="character_specie">Character Specie</string>
    <string name="character_gender">Character Gender</string>
    <string name="character_status">Character Status</string>
    <string name="character_origin">Character Origin</string>
    <string name="episodes">Episodes</string>
    <string name="some_episodes">Some episodes</string>
    <string name="episode_name">Episode Name</string>
    <string name="episode_airdate">Episode AirDate</string>
    <string name="episode_episode">Episode Episode</string>
    <string name="characters">Characters</string>
    <string name="name">Name</string>
    <string name="airdate">AirDate</string>
    <string name="some_locations">Some locations</string>
    <string name="location_name">Location Name</string>
    <string name="location_type">Location Type</string>
    <string name="location_dimension">Location Dimension</string>
    <string name="residents">Residents</string>
    <string name="type">Type</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="genderless">Genderless</string>
    <string name="unknown">unknown</string>
    <string name="character_gender_item">Gender: </string>
    <string name="character_origin_item">Origin: </string>
    <string name="character_specie_item">Specie: </string>
    <string name="character_status_item">Status: </string>
    <string name="episode_episode_item">Episode: </string>
    <string name="episode_airdate_item">Air Date: </string>
    <string name="location_dimensions_item">Dimensions: </string>
    <string name="location_type_item">Type: </string>
    <string name="species">Species</string>
    <string name="number">Number</string>
    <string name="dimension">Dimension</string>
    <string name="location">Location</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknownUp">Unknown</string>
    <string name="filter_by_species">Filter by species</string>
    <string name="filter_by_status">Filter by status</string>
    <string name="filter_by_gender">Filter by gender</string>
    <string name="mythological">Mythological</string>
    <string name="maleUp">Male</string>
    <string name="femaleUp">Female</string>
    <string name="genderlessUp">Genderless</string>
    <string name="apply_filters">Confirm filters</string>
    <string name="human">Human</string>
    <string name="humanoid">Humanoid</string>
    <string name="alien">Alien</string>
    <string name="filter_by_type">Filter by type</string>
    <string name="planet">Planet</string>
    <string name="microverse">Microverse</string>
    <string name="game">Game</string>
    <string name="cluster">Cluster</string>
    <string name="space_station">Space station</string>
    <string name="locations">Locations</string>
    <string name="filters">Filters</string>
    <string name="on_the_planet">On the planet</string>


</resources>