<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="Search by name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewFilterByStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/rick_and_morty_font"
            android:text="@string/filter_by_status"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFilterByStatus"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/alive"
                android:textColor="@color/greenStatus"
                android:textSize="16sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/dead"
                android:textColor="@color/greenStatus"
                android:textSize="16sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/unknownUp"
                android:textColor="@color/greenStatus"
                android:textSize="16sp" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textViewFilterBySpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rick_and_morty_font"
            android:text="@string/filter_by_species"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFilterBySpecies"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/human"
                android:textColor="@color/greenStatus"
                android:textSize="16sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/humanoid"
                android:textColor="@color/greenStatus"
                android:textSize="16sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip6"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/alien"
                android:textColor="@color/greenStatus"
                android:textSize="16sp" />


            <com.google.android.material.chip.Chip
                android:id="@+id/chip7"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/mythological"
                android:textColor="@color/greenStatus"
                android:textSize="16sp" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textViewFilterByGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rick_and_morty_font"
            android:text="@string/filter_by_gender"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup2" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFilterByGender"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip8"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/maleUp"
                android:textColor="@color/greenStatus"
                android:textSize="16sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip9"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/femaleUp"
                android:textColor="@color/greenStatus"
                android:textSize="16sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip10"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/genderlessUp"
                android:textColor="@color/greenStatus"
                android:textSize="16sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip11"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/unknownUp"
                android:textColor="@color/greenStatus"
                android:textSize="16sp" />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/confirmFiltersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_filters"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
