<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="1dp">

    <View
        android:id="@+id/view"
        android:layout_width="284dp"
        android:layout_height="134dp"
        android:background="@color/for_dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_character"
        android:layout_width="114dp"
        android:layout_height="134dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back_for_characters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textViewSpecies"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="@font/lato"
        android:text="@string/species"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/status"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_character"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpecies"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/lato"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/image_character"
        app:layout_constraintTop_toBottomOf="@+id/textViewStatus"
        app:layout_constraintVertical_bias="0.022" />

    <View
        android:id="@+id/view_for_name"
        android:layout_width="114dp"
        android:layout_height="25dp"
        android:background="@color/for_dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewCharacterName"
        android:layout_width="114dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/rick_and_morty_font"
        android:maxEms="5"
        android:maxLines="2"
        android:text="@string/character_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>